Made final fixes. fully adjusted project display, removed mobile nav and added dark mode icon on mobile, centered experience grid

--- a/portfolio.css
+++ b/portfolio.css
@@ -36,19 +36,43 @@
     grid-template-columns: 1fr 1fr 1fr;
 } */
 
-.swipe-img img {
+.img-container {
   display: block;
   height: 100%;
-  width: 85%;
+  width: 100%;
   margin: auto;
-  /* object-fit: cover; */
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  overflow: hidden;
 }
 
-/* .swipe-img img:hover {
-  width: 60%;
-} */
+.swipe-img {
+  background-color: #2c2c2c;
+  color: #fff;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 350px;
+  text-align: center;
+  margin: 20px auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swipe-img:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+}
+
+.swipe-img img {
+  width: 100%;
+  height: 180px;
+  margin: auto;
+  object-fit: cover;
+  cursor: pointer;
+}
 
 .swipe-img {
   display: flex;
@@ -66,7 +90,7 @@
   justify-content: center;
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 85%;
+  width: 100%;
   margin: auto;
   height: 100%;
   opacity: 0;
@@ -93,7 +117,7 @@
   width: 85%;
   height: 30px;
 
-  background-color: #333;
+  /* background-color: #333; */
   transition: all 0.3s ease-in-out;
 }
 
@@ -109,7 +133,11 @@
 
 .content-overlay div p {
   color: hsl(29, 92%, 52%);
-  font-size: 0.75rem;
+  /* font-size: 0.75rem; */
+  background-color: #444;
+  padding: 5px 10px;
+  border-radius: 30px;
+  font-size: 12px;
 }
 
 .swipe-img:hover .swipe-overlay {
@@ -126,13 +154,17 @@
 }
 
 .swipe-img p {
-  font-size: 14px;
+  /* font-size: 14px;
   width: 85%;
   line-height: 20px;
   letter-spacing: 1px;
   margin: auto;
   color: #fff;
-  font-family: cursive;
+  font-family: cursive; */
+  padding: 20px;
+  font-size: 14px;
+  color: #aaa;
+  margin-bottom: 15px;
 }
 
 .swipe-img button {
